# NeutronDiffusion

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  example.py  progress.txt  pyproject.toml  setup.py  test.py
.github/workflows/: ci.yml
NeutronDiffusion/: create.py  diffusion.py  diffusion_lambda.py  example.py  ndiffusion.py  problems.py
NeutronDiffusion.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cpp/: CMakeLists.txt
cpp/include/ndiffusion/: solver_1d.hpp  solver_2d.hpp  solver_3d.hpp  solver_detail.hpp  types.hpp
cpp/python/: bindings.cpp  bindings_1d.cpp
cpp/src/: main.cpp  solver_1d.cpp  solver_2d_structured.cpp  solver_2d_unstructured.cpp
data/: .~lock.D_12G_Pu_20pct240C.csv#  D_12G_Pu_20pct240.csv  D_12G_Pu_20pct240C.csv  D_618G_Pu_20pct240.csv  D_618G_Pu_20pct240C.csv  D_618G_Pu_239.csv  D_618G_Pu_240.csv  D_70G_Pu_20pct240.csv  D_70G_Pu_20pct240C.csv  D_87G_Pu_239.csv  D_87G_Pu_240.csv  D_87G_SS440.csv  D_87G_UH3_000pct235.csv  D_87G_UH3_025pct235.csv  D_87G_UH3_030pct235.csv  D_87G_UH3_050pct235.csv  D_87G_UH3_060pct235.csv  D_87G_UH3_100pct235.csv  D_87G_U_000pct235.csv  D_87G_U_025pct235.csv  D_87G_U_030pct235.csv  D_87G_U_050pct235.csv  D_87G_U_060pct235.csv  D_87G_U_100pct235.csv  Scat_12G_Pu_20pct240.csv  Scat_12G_Pu_20pct240C.csv  Scat_70G_Pu_20pct240.csv  Scat_70G_Pu_20pct240C.csv  Scat_87G_Pu_239.csv  Scat_87G_Pu_240.csv  Scat_87G_SS440.csv  Scat_87G_UH3_000pct235.csv  Scat_87G_UH3_025pct235.csv  Scat_87G_UH3_030pct235.csv  Scat_87G_UH3_050pct235.csv  Scat_87G_UH3_060pct235.csv  Scat_87G_UH3_100pct235.csv  Scat_87G_U_000pct235.csv  Scat_87G_U_025pct235.csv  Scat_87G_U_030pct235.csv  (+56 more)
data/neutron_transport_solutions/: keff_hydride_025pct235_s08.npy  keff_hydride_025pct235_s16.npy  keff_hydride_025pct235_s32.npy  keff_hydride_100pct235_s08.npy  keff_hydride_100pct235_s16.npy  keff_hydride_100pct235_s32.npy  keff_mix1_100pct235_s08.npy  keff_mix1_100pct235_s16.npy  keff_mix1_100pct235_s32.npy  keff_mix2_060pct235_s08.npy  keff_mix2_060pct235_s16.npy  keff_mix2_060pct235_s32.npy  keff_mix3_100pct235_s08.npy  keff_mix3_100pct235_s16.npy  keff_mix3_100pct235_s32.npy  keff_mix4_060pct235_s08.npy  keff_mix4_060pct235_s16.npy  keff_mix4_060pct235_s32.npy  keff_uranium_025pct235_s08.npy  keff_uranium_025pct235_s16.npy  keff_uranium_025pct235_s32.npy  keff_uranium_100pct235_s08.npy  keff_uranium_100pct235_s16.npy  keff_uranium_100pct235_s32.npy  phi_hydride_025pct235_s08.npy  phi_hydride_025pct235_s16.npy  phi_hydride_025pct235_s32.npy  phi_hydride_100pct235_s08.npy  phi_hydride_100pct235_s16.npy  phi_hydride_100pct235_s32.npy  phi_mix1_100pct235_s08.npy  phi_mix1_100pct235_s16.npy  phi_mix1_100pct235_s32.npy  phi_mix2_060pct235_s08.npy  phi_mix2_060pct235_s16.npy  phi_mix2_060pct235_s32.npy  phi_mix3_100pct235_s08.npy  phi_mix3_100pct235_s16.npy  phi_mix3_100pct235_s32.npy  phi_mix4_060pct235_s08.npy  (+8 more)
diffusion/: computational_engineering.py  diffusion_lambda.py  main.py  matrix_solutions.py  utils.py
examples/: example.py  graphing.py  k_eigenvalue.py  new.sh  time_dependent.py  transport_cross_sections.py
src/: matrix_build.c
src/ndiffusion/: __init__.py  adjoint.py  create.py  mesh.py  nearby.py  transport.py
src/ndiffusion/data/: problem_setup.json
tests/: compare618.py  conftest.py  creating_tests.py  csv_create.py  example.txt  kEigenRuns.txt  pytest.ini  steel_reflected_setup.py  test_1d_fixed_source.py  test_1d_k_eigenvalue.py  test_1d_time_dependent.py  test_2d_fixed_source.py  test_2d_k_eigenvalue.py  test_2d_time_dependent.py  test_adjoint.py  test_benchmarks.py  test_cg_ab.py  test_computational_engineering.py  test_diffusion_lambda.py  test_diffusion_lambda_fast.py  test_k_eigenvalue.py  test_materials_validation.py  test_matrix_solutions.py  test_mesh_gmsh.py  test_nearby_1d.py  test_nearby_2d.py  test_nearby_unstructured.py  test_time_dependent.py  test_transport.py
tools/: c5g7_fuel_mesh.py
