[build-system]
requires = ["scikit-build-core >= 0.9", "pybind11 >= 2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "ndiffusion"
version = "0.2.0"
description = "Multigroup neutron diffusion solver — C++ core with Python bindings"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["neutron diffusion", "c++", "pybind11", "k-eigenvalue", "nuclear engineering"]
authors = [{name = "Ben Whewell", email = "ben.whewell@pm.me"}]
requires-python = ">=3.9"
dependencies = ["numpy"]

[project.optional-dependencies]
test = ["pytest"]

[tool.scikit-build]
# Pure-Python source of the ndiffusion package
wheel.packages = ["src/ndiffusion"]
# CMake install() puts _core.so into ndiffusion/ inside the wheel

[tool.scikit-build.cmake]
build-type = "Release"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
python_classes = ["Test*", "*Tests"]
