[build-system]
requires = ["scikit-build-core >= 0.9", "pybind11 >= 2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "ndiffusion"
version = "0.3.0"
description = "Multigroup neutron diffusion solver - C++ core with Python bindings"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["neutron diffusion", "c++", "pybind11", "k-eigenvalue", "nuclear engineering"]
authors = [{name = "Ben Whewell", email = "ben.whewell@pm.me"}]
requires-python = ">=3.9"
dependencies = ["numpy"]

[project.optional-dependencies]
test = ["pytest", "scipy"]
mesh = ["gmsh"]
nearby = ["scipy"]

[tool.scikit-build]
# Pure-Python source of the ndiffusion package
wheel.packages = ["src/ndiffusion"]
# CMake install() puts _core.so into ndiffusion/ inside the wheel

[tool.scikit-build.cmake]
build-type = "Release"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
python_classes = ["Test*"]

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = ["data", "Testing", "build", "docs"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E741",  # ambiguous single-letter names - common in numerics (l, I)
]

[tool.ruff.lint.per-file-ignores]
# Tests build inputs inline: long literal rows and aligned compact
# multi-assignments (mesh/region construction) are clearer as written.
"tests/*" = ["E501", "E702"]
"tools/c5g7_fuel_mesh.py" = ["E702"]
